force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The superannuation fund this payees contributions will be directed to</description>
    <inlineHelpText>The related Superannuation Fund.</inlineHelpText>
    <label>Superannuation Fund</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <errorMessage>You have not selected a Superannuation Fund with a valid Record Type.</errorMessage>
        <filterItems>
            <field>tc9_pr__Superannuation_Fund__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>APRA_and_RSA_Funds</value>
        </filterItems>
        <filterItems>
            <field>tc9_pr__Superannuation_Fund__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Self_Managed</value>
        </filterItems>
        <infoMessage>You can only select Superannuation Funds with a record type of Aora and RSA Funds, or, Self Managed.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Payee Withholdings</relationshipLabel>
    <relationshipName>Payee_Withholdings</relationshipName>
    <type>Lookup</type>
</CustomField>