force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Superannuation_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund_Name__c</fullName>
    <description>The name of the related superannuation fund.</description>
    <formula>tc9_pr__Superannuation_Fund__r.tc9_pr__Fund_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the related superannuation fund.</inlineHelpText>
    <label>Superannuation Fund Name</label>
    <type>Text</type>
</CustomField>