force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Superannuation_Fund_Nomination__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund_Nomination__c</fullName>
    <description>The type of fund nominated by the Payee.</description>
    <inlineHelpText>The type of fund nominated by the Payee.</inlineHelpText>
    <label>Superannuation Fund Nomination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Superannuation_Fund_Nomination</valueSetName>
    </valueSet>
</CustomField>