force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Superannuation_Payable__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Payable__c</fullName>
    <description>Defines if Superannuation  will be payable for a AU GST Payee. This field will control is AU Super withholding rules can be created for the Payee</description>
    <inlineHelpText>Defines if Superannuation  will be payable for a AU GST Payee. This field will control is AU Super withholding rules can be created for the Payee</inlineHelpText>
    <label>Superannuation Payable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>