force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Superannuation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Type__c</fullName>
    <description>Determine which type of superannuation calculation will be performed during Pay Batch calculation.</description>
    <inlineHelpText>Determine which type of superannuation calculation will be performed during Pay Batch calculation.</inlineHelpText>
    <label>Superannuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Superannuation_Type</valueSetName>
    </valueSet>
</CustomField>