force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Tax_File_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Tax_File_Number__c</fullName>
    <description>The Tax File Number of the payee which must be provided in a valid ATO format.</description>
    <inlineHelpText>The Tax File Number of the payee which must be provided in a valid ATO format.</inlineHelpText>
    <label>Tax File Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>