force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Tax_Variation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Tax_Variation_Percentage__c</fullName>
    <description>To be populated when the employer has received notification from the ATO that PAYG withholding should be calculated on a percentage basis</description>
    <inlineHelpText>To be populated when the employer has received notification from the ATO that PAYG withholding should be calculated on a percentage basis</inlineHelpText>
    <label>Tax Variation Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>