force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__TFN_Declaration_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__TFN_Declaration_Date_Signed__c</fullName>
    <description>The date on which the payee signed their Tax File Number declaration.</description>
    <inlineHelpText>The date on which the payee signed their Tax File Number declaration.</inlineHelpText>
    <label>TFN Declaration Date Signed</label>
    <type>Date</type>
</CustomField>