force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__UK_NI_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Category__c</fullName>
    <description>The Payee National Insurance Category.</description>
    <inlineHelpText>The Payee National Insurance Category.</inlineHelpText>
    <label>UK NI Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_NI_Category_Picklists</valueSetName>
    </valueSet>
</CustomField>