force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__UK_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Tax_Code__c</fullName>
    <description>This is issued by the HMRC &amp; relates to the amount of earnings that an individual earns before needing to pay PAYE with various calculation differences based on coding.</description>
    <inlineHelpText>This is issued by the HMRC &amp; relates to the amount of earnings that an individual earns before needing to pay PAYE with various calculation differences based on coding.</inlineHelpText>
    <label>UK Tax Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>