force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__UK_Tax_Code_W1M1__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Tax_Code_W1M1__c</fullName>
    <description>Determines if the personal allowance &amp; tax payable is calculated as if earned in week 1/ month 1 (per pay period) or on a cumulative (YTD) basis.</description>
    <inlineHelpText>Determines if the personal allowance &amp; tax payable is calculated as if earned in week 1/ month 1 (per pay period) or on a cumulative (YTD) basis.</inlineHelpText>
    <label>UK Tax Code W1/M1?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>