force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__VAT_Registration_Number__c</fullName>
    <description>A unique VAT registration number issued by HMRC.</description>
    <label>VAT Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>