force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Zone_Offset__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Zone_Offset__c</fullName>
    <description>Indicates whether the payee is wishes to claim a Zone offset</description>
    <inlineHelpText>Indicates whether the payee is wishes to claim a Zone offset</inlineHelpText>
    <label>Zone Offset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>