force-app/main/default/objects/tc9_pr__Payee_Withholding__c/fields/tc9_pr__Zone_or_Other_Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Zone_or_Other_Offset_Amount__c</fullName>
    <description>The amount of zone or other offset that should be applied during PAYG calculation.</description>
    <inlineHelpText>The amount of zone or other offset that should be applied during PAYG calculation.</inlineHelpText>
    <label>Zone or Other Offset Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>