force-app/main/default/objects/tc9_pr__Payee_Withholding__c/recordTypes/tc9_pr__AU_GST.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_GST</fullName>
    <active>true</active>
    <description>Captures details of Australian contractors</description>
    <label>AU GST</label>
</RecordType>