force-app/main/default/objects/tc9_pr__Payee_Withholding__c/recordTypes/tc9_pr__AU_PAYG.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_PAYG</fullName>
    <active>true</active>
    <label>AU PAYG</label>
</RecordType>