force-app/main/default/objects/tc9_pr__Payee_Withholding__c/recordTypes/tc9_pr__AU_Payroll_Tax.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_Payroll_Tax</fullName>
    <active>true</active>
    <description>Details of Payee payroll tax locality or exemption</description>
    <label>AU Payroll Tax</label>
</RecordType>