force-app/main/default/objects/tc9_pr__Payee_Withholding__c/recordTypes/tc9_pr__UK_PAYE_NI.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__UK_PAYE_NI</fullName>
    <active>true</active>
    <label>UK PAYE and NI</label>
</RecordType>