force-app/main/default/objects/tc9_pr__Payee_Withholding__c/recordTypes/tc9_pr__UK_VAT.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__UK_VAT</fullName>
    <active>true</active>
    <label>UK VAT</label>
</RecordType>