force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_eau__STP2_TFN_Check.listView-meta.xml
<ListView>
    <fullName>tc9_eau__STP2_TFN_Check</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Tax_File_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Expiry_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_pr__Tax_File_Number__c</field>
        <operation>equals</operation>
        <value>987654321</value>
    </filters>
    <label>STP2 TFN Check</label>
</ListView>