force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_eau__STP2_WHM_Country_Check.listView-meta.xml
<ListView>
    <fullName>tc9_eau__STP2_WHM_Country_Check</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Country_of_Visa_Work__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Approved_Working_Holiday_Maker__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>tc9_pr__Expiry_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_pr__Expiry_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2022</value>
    </filters>
    <label>STP2 WHM Country Check</label>
</ListView>