force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_edc__Super_Overrides.listView-meta.xml
<ListView>
    <fullName>tc9_edc__Super_Overrides</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Super_Variation_Percentage__c</columns>
    <columns>tc9_pr__Super_Variation_Amount__c</columns>
    <columns>tc9_pr__Minimum_Monthly_Earnings__c</columns>
    <columns>tc9_pr__Maximum_Super_Contribution_Base__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Payee_Withholding__c.tc9_pr__AU_SUPER</value>
    </filters>
    <filters>
        <field>tc9_pr__Super_Variation_Amount__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>tc9_pr__Super_Variation_Percentage__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>tc9_pr__Minimum_Monthly_Earnings__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>tc9_pr__Maximum_Super_Contribution_Base__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Superannuation Overrides</label>
</ListView>