force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__AU_Tax_Scale__c</columns>
    <columns>tc9_pr__Australian_Resident__c</columns>
    <columns>tc9_pr__Pay_Batch_Event__c</columns>
    <columns>tc9_pr__Pay_Batch_Event_Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>