force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_pr__GST_Withholding.listView-meta.xml
<ListView>
    <fullName>tc9_pr__GST_Withholding</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Pay_Batch_Event__c</columns>
    <columns>tc9_pr__Pay_Batch_Event_Processing_Status__c</columns>
    <columns>tc9_pr__Business_Name__c</columns>
    <columns>tc9_pr__Trading_Name__c</columns>
    <columns>tc9_pr__GST_Registered__c</columns>
    <columns>tc9_pr__GST_Exempt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Payee_Withholding__c.tc9_pr__AU_GST</value>
    </filters>
    <label>GST Withholding</label>
</ListView>