force-app/main/default/objects/tc9_pr__Payee_Withholding__c/listViews/tc9_pr__No_Super_Fund.listView-meta.xml
<ListView>
    <fullName>tc9_pr__No_Super_Fund</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__Superannuation_Fund__c</columns>
    <columns>tc9_pr__Super_Membership_Number__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Pay_Batch_Event_Processing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Superannuation_Fund__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_pr__Expiry_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>tc9_pr__Expiry_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Payee_Withholding__c.tc9_pr__AU_SUPER</value>
    </filters>
    <label>No Super Fund</label>
</ListView>